# pulsar-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/omnimcp/: __init__.py  log.py  mcp_engine.py  settings.py  types.py  utilities.py
src/omnimcp/services/: index.py
src/pulsar_mcp/: main.py  mcp_engine.py  mcp_server.py  types.py
src/pulsar_mcp/services/: content_manager.py  descriptor.py  index.py
src/pulsar_mcp/tools/: __init__.py  execute_tool.py  list_running_servers.py
tests/: test_content_manager.py  test_descriptor.py  test_embedding.py  test_index.py  test_settings.py  test_types.py
