[project]
name = "pulsar-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BA Ibrahima", email = "ibrahima.ba@ouest-france.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastmcp>=2.13.1",
    "mcp>=1.22.0",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyzmq>=27.1.0",
    "qdrant-client>=1.16.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
]

[project.scripts]
pulsar-mcp = "pulsar_mcp:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
